feat: Reestrutura do layout de cardapio + adição dos preços

--- a/02-html-css-bootstrap/desafio03-/cafeteria/layoutCafeteria.html
+++ b/02-html-css-bootstrap/desafio03-/cafeteria/layoutCafeteria.html
@@ -92,112 +92,116 @@ margin-top:20px;
 
 <h3>☕ Bebidas</h3>
 
-<ul>
+<table border="1" width="60%" align="center" cellpadding="10">
 
-<li>
+<tr>
 
-<strong>Expresso Duplo</strong>
+<th>Produto</th>
 
-<ul>
+<th>Descrição</th>
 
-<li>Grãos 100% Arábica</li>
+<th>Preço</th>
 
-<li>Intensidade 9</li>
+</tr>
 
-</ul>
+<tr>
 
-</li>
+<td>Expresso Duplo</td>
 
+<td>Grãos 100% Arábica<br>Intensidade 9</td>
 
-<li>
+<td>R$ 8,00</td>
 
-<strong>Cappuccino de Avelã</strong>
+</tr>
 
-<ul>
+<tr>
 
-<li>Contém Leite</li>
+<td>Cappuccino de Avelã</td>
 
-<li>Xarope de Avelã (Contém Castanhas)</li>
+<td>Contém Leite<br>Xarope de Avelã (Contém Castanhas)</td>
 
-</ul>
+<td>R$ 14,00</td>
 
-</li>
+</tr>
 
-</ul>
+</table>
 
 
 
 <h3>🥐 Salgados</h3>
 
-<ol>
+<table border="1" width="60%" align="center" cellpadding="10">
 
-<li>
+<tr>
 
-<strong>Pão de Queijo Recheado</strong>
+<th>Produto</th>
 
-<ul>
+<th>Descrição</th>
 
-<li>Queijo Canastra</li>
+<th>Preço</th>
 
-<li>Recheio de Requeijão</li>
+</tr>
 
-</ul>
+<tr>
 
-</li>
+<td>Pão de Queijo Recheado</td>
 
+<td>Queijo Canastra<br>Recheio de Requeijão</td>
 
-<li>
+<td>R$ 10,00</td>
 
-<strong>Quiche de Alho Poró</strong>
+</tr>
 
-<ul>
+<tr>
 
-<li>Contém Glúten</li>
+<td>Quiche de Alho Poró</td>
 
-<li>Contém Ovos</li>
+<td>Contém Glúten<br>Contém Ovos</td>
 
-</ul>
+<td>R$ 16,00</td>
 
-</li>
+</tr>
 
-</ol>
+</table>
 
 
 
 <h3>🍰 Doces</h3>
 
-<ul>
+<table border="1" width="60%" align="center" cellpadding="10">
 
-<li>
+<tr>
 
-<strong>Brownie de Chocolate Amargo</strong>
+<th>Produto</th>
 
-<ul>
+<th>Descrição</th>
 
-<li>Chocolate 70%</li>
+<th>Preço</th>
 
-<li>Pode conter traços de amendoim</li>
+</tr>
 
-</ul>
+<tr>
 
-</li>
+<td>Brownie de Chocolate Amargo</td>
 
+<td>Chocolate 70%<br>Pode conter traços de amendoim</td>
 
-<li>
+<td>R$ 12,00</td>
 
-<strong>Torta de Limão Siciliano</strong>
+</tr>
 
-<ul>
+<tr>
 
-<li>Base de biscoito amanteigado</li>
+<td>Torta de Limão Siciliano</td>
 
-<li>Creme de limão natural</li>
+<td>Base de biscoito amanteigado<br>Creme de limão natural</td>
 
-</ul>
+<td>R$ 14,00</td>
 
-</li>
+</tr>
 
-</ul>
+</table>
+
 
 </section>
 
