--- a/02-html-css-bootstrap/desafio03-/cafeteria/layoutCafeteria.html
+++ b/02-html-css-bootstrap/desafio03-/cafeteria/layoutCafeteria.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cafeteria Tech & Coffee | Menu</title>
+<title>☕ Cafeteria Tech & Coffee | Menu</title>
 
 <style>
 
@@ -30,6 +30,12 @@ main{
 
 padding:20px;
 
+}
+
+img {
+  width: 100%;
+  height: 400px; /* Ou a altura que você preferir */
+  object-fit: cover; /* Isso corta as bordas mas mantém a proporção da foto */
 }
 
 /* TABELA */
@@ -88,6 +94,7 @@ margin-top:20px;
 <section>
 
 <h2>Nosso Menu</h2>
+<image src="nossosProdutos.png" width="50%" height="80px"/>
 
 
 <h3>☕ Bebidas</h3>
