fix: atualiza proporção das imagens

--- a/02-html-css-bootstrap/desafio03-layout/cafeteria/siteEmpresa.html
+++ b/02-html-css-bootstrap/desafio03-layout/cafeteria/siteEmpresa.html
@@ -104,6 +104,12 @@ border-radius:10px;
 box-shadow:0 4px 10px rgba(0,0,0,0.2);
 }
 
+img {
+  width: 100%;
+  height: 400px; /* Ou a altura que você preferir */
+  object-fit: cover; /* Isso corta as bordas mas mantém a proporção da foto */
+}
+
 /* RODAPÉ */
 
 footer{
@@ -142,11 +148,11 @@ width: 100%;
 
 <a href="javascript:void(0)" class="fechar" onclick="fecharMenu()">×</a>
 
-<a href="cafeteria/siteEmpresa.html">Início</a>
+<a href="siteEmpresa.html">Início</a>
 
-<a href="cafeteria/layoutCafeteria.html">Menu</a>
+<a href="layoutCafeteria.html">Menu</a>
 
-<a href="cafeteria/missao.html"> Sobre Nós</a>
+<a href="missao.html"> Sobre Nós</a>
 
 <a href="#">Contato</a>
 
@@ -157,7 +163,7 @@ width: 100%;
 <main>
 
 <h2>Bem-vindo à cafeteria</h2>
-<image src="cafeteria/cafeteria.png" alt="Cafeteria Tech & Coffee" width="40%" height="300px">
+<image src="cafeteria.png" alt="Cafeteria Tech & Coffee" width="40%" height="300px">
 
 <p>Aqui vai seu conteúdo normal.</p>
 
