fix: atualiza imagens

--- a/02-html-css-bootstrap/desafio03-layout/cafeteria/siteEmpresa.html
+++ b/02-html-css-bootstrap/desafio03-layout/cafeteria/siteEmpresa.html
@@ -154,7 +154,7 @@ width: 100%;
 
 <a href="missao.html"> Sobre Nós</a>
 
-<a href="#">Contato</a>
+<a href="formulario.html">Contato</a>
 
 </div>
 
