style: Estilo, cor e animações

--- a/02-html-css-bootstrap/CSS/desafio02-cartaoPerfil/cartao.html
+++ b/02-html-css-bootstrap/CSS/desafio02-cartaoPerfil/cartao.html
@@ -13,7 +13,7 @@
 
 <div class="card">
 
-<img src="minhaFoto.png">
+<img src="minhaFoto.png" alt="Foto de Perfil">
 
 <h1>Kariny Santos</h1>
 
@@ -23,11 +23,11 @@ Estudante de Análise e Desenvolvimento de Sistemas 💻
 Apaixonada por tecnologia, dados e desenvolvimento.
 </p>
 
-<a href="https://www.linkedin.com/in/kariny-santos-883a991a7/" target="_blank">
+<a href="https://linkedin.com" target="_blank">
 LinkedIn
 </a>
 
-<a href="https://github.com/KaSantosAlpar/Rocket-Program" target="_blank">
+<a href="https://github.com" target="_blank">
 GitHub
 </a>
 
